--- a/config/config.env
+++ b/config/config.env
@@ -2,6 +2,6 @@ PORT = 4000
 
 CLOUDINARY_CLIENT_NAME =dw7uiiq1w
 CLOUDINARY_CLIENT_API =129441825245646 
-CLOUDINARY_CLIENT_SECRET =7P3M92WA9C7HddVhVf244kOX9ks
+CLOUDINARY_CLIENT_SECRET =
 
 FRONTEND_URL=http://localhost:5173
