--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,17 @@
 PORT = 4000
 
 CLOUDINARY_CLIENT_NAME =dw7uiiq1w
-CLOUDINARY_CLIENT_API =129441825245646 
+
+CLOUDINARY_CLIENT_API =129441825245646
+ 
 CLOUDINARY_CLIENT_SECRET =
 
 FRONTEND_URL=http://localhost:5173
+
+MONGO_URI= mongodb+srv://sakshinikharge39:sakshi@reactwithsakshi.7z4n1fg.mongodb.net/
+
+JWT_SECRET_KEY=jsdfheibtvaieraireaberawrth
+
+JWT_EXPIRE=7d
+
+COOKIE_EXPIRE=5
